# gigawattmap

./: .env.example  .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  SPEC.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.githooks/: pre-commit
data-pipeline/: .env.example  Makefile  pyproject.toml
data-pipeline/opendc/: __init__.py  cli.py  manifest.py  operators.py  publish.py  schemas.py  typegen.py
data-pipeline/opendc/data/: ai-campuses.csv  cloud-regions.json  country-iso2.csv  operators.csv
data-pipeline/opendc/data/announcements/: 2022-06-22-groton-moratorium.yaml  2025-01-09-stargate-milam-sb-energy.yaml  2025-01-13-reno-sierra-club-appeal.yaml  2025-01-21-openai-community-plan.yaml  2025-01-21-stargate-project.yaml  2025-03-18-crusoe-abilene-expansion.yaml  2025-04-02-homer-city-energy-campus.yaml  2025-05-21-crusoe-abilene-financing.yaml  2025-06-02-applied-digital-ellendale-coreweave-250mw-lease.yaml  2025-06-03-vantage-ohio-green-loans.yaml  2025-06-09-vantage-euro-abs.yaml  2025-06-12-eu-data-center-efficiency-package.yaml  (+39 more)
data-pipeline/opendc/search/: __init__.py  build_index.py
data-pipeline/opendc/sources/: __init__.py  announcements.py  cloud_regions.py  curated.py  gem.py  geocode.py  opposition.py  osm.py  osm_power.py  telegeography.py
data-pipeline/opendc/tiles/: __init__.py  build.py  upload.py
data-pipeline/opendc/transform/: __init__.py  enrich_substations.py  estimate_mw.py  export_datacenters.py  merge.py  normalize_fuel.py
data-pipeline/opendc/utils/: __init__.py  http.py
data-pipeline/tests/: test_announcements.py  test_artifact_schemas.py  test_cloud_regions.py  test_curated.py  test_enrich_substations.py  test_export_datacenters.py  test_gem_normalize.py  test_gem_resolve.py  test_geocode.py  test_manifest.py  test_merge.py  test_normalize_fuel.py  test_operator_match.py  test_opposition.py  test_osm_normalize.py  test_publish.py  test_schemas.py  test_search_index.py  test_telegeography.py  test_tiles_build.py  test_tiles_upload.py  test_typegen.py
data-pipeline/tests/fixtures/: gem-sample.csv  telegeography-sample.json
(+182 files in other folders)
